[build-system]
requires = [
    "setuptools>=45",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.2.5"
log_cli = "True"
log_cli_level = "DEBUG"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.6.2"
version_files = [
    "src/nntm/__init__.py",
    "README.md",
    "docs/source/conf.py"
]