[metadata]
name = nntm
version = attr: nntm.__version__
author = Timo Sutterer
author_email = hi@timo-sutterer.de
license = MIT
description = A set of python modules for the Numerai competition
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/suud/nntm
project_urls =
    Bug Tracker = https://github.com/suud/nntm/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Software Development
    Topic :: Scientific/Engineering
keywords = numerai

[options]
package_dir =
packages = nntm
install_requires = 
    numerapi>=2.9.0
    pandas>=1.3.3
    pyarrow>=5.0.0
    scikit-learn>=1.0
python_requires = >=3.9

[flake8]
max-line-length = 88
extend-ignore = E203

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326