[metadata]
name = nntm
version = attr: nntm.__version__
author = Timo Sutterer
author_email = hi@timo-sutterer.de
license = MIT
description = A set of modules for the Numerai tournament.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/suud/nntm
project_urls =
    Bug Tracker = https://github.com/suud/nntm/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Software Development
    Topic :: Scientific/Engineering
keywords = numerai

[options]
package_dir =
    = src
packages = find:
install_requires = 
    numerapi>=2.9.0
    pandas>=1.1.0
    pyarrow>=3.0.0
    scikit-learn>=0.22.0
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326